fixed fonts and attemted to fix horizontal scroll

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -117,7 +117,5 @@
 
 @media screen and (min-width: 581px) and (max-width: 945px) {
   .profile {
-    padding-left: 27px;
-    padding-right: 27px;
   }
 }
